# name-normalizer

./: .gitignore  LICENSE  README.md
clojure/: README.md  project.clj
clojure/src/name_normalizer/: core.clj
clojure/test/name_normalizer/: core_test.clj
cpp-gcc/: .gitignore  CMakeLists.txt  README.md  run
cpp-gcc/src/: CMakeLists.txt  NameNormalizer.cpp
cpp-gcc/src/include/: NameNormalizer.h  StringUtil.h
cpp-gcc/test/: CMakeLists.txt  NameNormalizerTest.cpp  StringUtilTest.cpp  fancy_main.cpp  library.cpp  main.cpp  unimaginative_main.cpp
csharp/: .gitignore  README.md
csharp/NameNormalizer/: NameNormalizer.sln
csharp/NameNormalizer/NameNormalizer/: AnAuthorNameNormalizer.cs  Tests.csproj  packages.config
csharp/NameNormalizer/Prod/: AuthorNameNormalizer.cs  Prod.csproj
elixir/: .gitignore  README.md  mix.exs
elixir/lib/: name_normalizer.ex
elixir/test/: name_normalizer_test.exs
golang/: .gitignore  authorname.go  go.mod  main.go  main_test.go
golang/pkg/authornames/: main_test.go
java/: .gitignore  README.md  build.gradle
java/gradle/wrapper/: gradle-wrapper.properties
js/: .babelrc  .gitignore  README.md  package.json
js/src/: name-normalizer.js  name-normalizer.test.js
kotlin/: README.md
kotlin-junit5/: .gitignore  README.md  SOLUTION-NOTES.md  build.gradle.kts  settings.gradle.kts
kotlin-junit5/gradle/: libs.versions.toml
kotlin/src/main/: AuthorNameNormalizer.kt
kotlin/src/test/: AuthorNameNormalizerTests.kt
objc/: README.md
objc/NameNormalizerObjC/NameNormalizer/: AuthorNameNormalizer.h  (+2 more)
objc/NameNormalizerObjC/NameNormalizer.xcodeproj/: project.pbxproj
python/: .gitignore  README.md  name_normalizer.py  name_normalizer_test.py
ruby/: Gemfile  README.md  name_normalizer.rb
ruby/lib/: name_normalizer.rb
ruby/spec/: name_normalizer_spec.rb
ruby/test/: name_normalizer_spec.rb
rust/: .gitignore  Cargo.toml  README.md
rust/src/: lib.rs
swift/: .gitignore  README.md
typescript/: jest.config.js  package-lock.json  package.json
typescript/src/: nameNormalizer.spec.ts  nameNormalizer.ts
zig/: .gitignore  README.md  build.zig  build.zig.zon
zig/src/: root.zig
(+16 files in other folders)
